refactor: CSS/SCSS Optimization & Modernization Phase 1 complete

--- a/inc/modules/blog-layouts/assets/css/blog-layouts-module.css
+++ b/inc/modules/blog-layouts/assets/css/blog-layouts-module.css
@@ -4040,3 +4040,4 @@ body:not(.sidebar_enabled) .list-style-v3 .default-item {
   padding: 10px 5px 9px;
   background-color: transparent;
 }
+/*# sourceMappingURL=blog-layouts-module.css.map */
