--- a/assets/sass/elements/_elements.scss
+++ b/assets/sass/elements/_elements.scss
@@ -59,7 +59,7 @@ blockquote {
 }
 
 hr {
-	background-color: colors.$color__background-hr;
+	background-color: var(--kava-color-background-hr, colors.$color__background-hr);
 	border: 0;
 	height: 1px;
 	margin: 1.5em 0;
