--- a/assets/sass/variables-site/_typography.scss
+++ b/assets/sass/variables-site/_typography.scss
@@ -1,4 +1,4 @@
-$font__main: sans-serif;
+$font__main: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
