--- a/assets/sass/modules/_clearings.scss
+++ b/assets/sass/modules/_clearings.scss
@@ -1,32 +1,40 @@
 @use "../mixins/mixins-master";
 
-.clear:before,
-.clear:after,
-.comment-body:before,
-.comment-body:after,
-.entry-content:before,
-.entry-content:after,
-.entry-footer:before,
-.entry-footer:after,
-.comment-content:before,
-.comment-content:after,
-.site-header:before,
-.site-header:after,
-.site-content:before,
-.site-content:after,
-.site-footer:before,
-.site-footer:after {
+// Modern selector: :is() reduces specificity and improves readability
+:is(
+	.clear,
+	.comment-body,
+	.entry-content,
+	.entry-footer,
+	.comment-content,
+	.site-header,
+	.site-content,
+	.site-footer
+):before,
+:is(
+	.clear,
+	.comment-body,
+	.entry-content,
+	.entry-footer,
+	.comment-content,
+	.site-header,
+	.site-content,
+	.site-footer
+):after {
 	@include mixins-master.clearfix;
 }
 
-.clear:after,
-.comment-body:after,
-.entry-content:after,
-.entry-footer:after,
-.comment-content:after,
-.site-header:after,
-.site-content:after,
-.site-footer:after {
+// Modern selector: :is() reduces specificity
+:is(
+	.clear,
+	.comment-body,
+	.entry-content,
+	.entry-footer,
+	.comment-content,
+	.site-header,
+	.site-content,
+	.site-footer
+):after {
 	@include mixins-master.clearfix-after;
 }
 
