--- a/assets/sass/elements/_lists.scss
+++ b/assets/sass/elements/_lists.scss
@@ -1,6 +1,7 @@
 @use "../mixins/mixins-master";
 
-ul, ol {
+// Modern selector: :is() for better readability
+:is(ul, ol) {
 	margin: 0 0 1.5em 1.5em;
 	padding-left:0;
 	padding-right:0;
